<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/CompanyName"/>
    <Button
        android:id="@+id/btnAcarreos"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:text="@string/acarreos"
        android:textSize="25sp"
        android:enabled="false"/>
    <Button
        android:id="@+id/btnBodega"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:text="@string/mnuBodega"
        android:textSize="25sp"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:text="@string/btnEmpty"
        android:textSize="25sp"
        android:enabled="false"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:text="@string/btnEmpty"
        android:textSize="25sp"
        android:enabled="false"/>

</LinearLayout>