<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/CompanyName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/checkpoint_locacion"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:text="@string/req_de_material"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/txtRequerimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnCheckLocation"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:text="@string/checkpoint"
        android:textSize="25sp"/>

</LinearLayout>