<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:contentDescription="@string/CompanyName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/uName"
        android:labelFor="@+id/txtUser"/>

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/uPass"
        android:labelFor="@+id/txtPass"/>

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/txtIngresar"
        android:backgroundTint="@color/black"/>


</LinearLayout>